# slay-the-spire-ai

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
logs/: agent_trace.jsonl
scripts/: proceed_once.py
src/sts_ai/: __init__.py  agent.py  benchmark.py  capture.py  cli.py  dataset.py  evaluator.py  features.py  input.py  model_policy.py  models.py  network.py  parser.py  policy.py  regions.py  rewards.py  search.py  simulator.py  trainer.py
tests/: test_agent.py  test_benchmark.py  test_capture.py  test_dataset.py  test_features.py  test_input.py  test_noncombat_policy.py  test_policy.py  test_policy_regression.py  test_rewards.py  test_simulator.py
tests/fixtures/: combat_block_pressure.json  combat_energy_gate.json  combat_lethal_pref.json
