[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sts-ai"
version = "0.1.0"
description = "Prototype tooling for a Slay the Spire AI agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26,<3.0",
  "pydantic>=2.6,<3.0",
  "typer>=0.12,<1.0",
]

[project.optional-dependencies]
capture = [
  "mss>=9.0,<10.0",
  "opencv-python>=4.10,<5.0",
  "Pillow>=10.0,<11.0",
  "pytesseract>=0.3.10,<1.0",
  "pyautogui>=0.9.54,<1.0",
]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-cov>=5.0,<6.0",
  "ruff>=0.4,<0.8",
]
train = [
  "torch>=2.2,<3.0",
]

[project.scripts]
sts-ai = "sts_ai.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
